--- a/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
+++ b/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
@@ -1,1 +1,60 @@
-*test
+# SETUP SAMBA SERVER CESTOS 7
+
+### ***Mục lục***
+
+[1.	Mô hình và chuẩn bị](#1)
+
+[2.	Cấu hình Samba](#2)
+
+- [2.1.	Samba Server](#2.1)
+
+- [2.2.	Samba Client](#2.2)
+
+- [2.3.	Setup Samba Server](#2.3)
+
+- [2.4. ](#2.4)
+
+- [2.5. ](#2.5)
+
+[3. Tham khảo](#3)
+
+<a name = '1'></a>
+# 1. Mô hình và chuẩn bị
+![img](../images/mohinh_samba.png)
+
+<a name = '2'></a>
+# 2. Cấu hình Samba
+<a name = '2.1'></a>
+
+## 2.1 Samba Server
+```
+Operating system : CentOS 7 minimal server
+Hostname : server.unixmen.local
+IP Address : 192.168.1.101/24
+```
+
+<a name = '2.2'></a>
+## 2.2 Samba Client
+```
+Operating system : Windows 7 Professional
+Hostname : client
+IP Address : 192.168.1.102/24
+```
+<a name = '2.3'></a>
+## 2.3 Setup Samba Server
+- Kiểm tra gói samba hiện có nếu có sử dụng các lệnh sau.
+```
+rpm -qa | grep samba
+yum list installed | grep samba
+```
+- Nếu samba được cài đặt, loại bỏ nó bằng lệnh dưới đây:
+```
+yum remove samba*
+```
+- Bây giờ, cài đặt samba bằng lệnh sau.
+```
+yum install samba* -y
+```
+
+<a name = '3'></a>
+# 3. Tham Khảo
