--- a/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
+++ b/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
@@ -182,7 +182,7 @@ firewall-cmd --reload
 
 <a name = '2.3.4'></a>
 ### 2.3.4. Setup SELinux
-- Bật ***Bamba samba_enable_home_dirs*** nếu bạn muốn chia sẻ thư mục home qua Samba.
+- Bật ***samba_enable_home_dirs *** nếu bạn muốn chia sẻ thư mục home qua Samba.
 ```
 setsebool -P samba_enable_home_dirs trên
 ```
