--- a/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
+++ b/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
@@ -18,6 +18,9 @@
   - [2.3.4. Setup SELinux ](#2.3.4)
 
 - [2.4. Test Samba Share](#2.4)
+- [2.5. Tạo chia sẻ kích hoạt bảo mật trong máy chủ samba.](#2.5)
+- [2.6. Test Samba Share with user](#2.6)
+
 
 [3. Tham khảo](#3)
 
@@ -58,6 +61,8 @@ yum remove samba*
 ```
 yum install samba* -y
 ```
+![img](../images/1.1.png)
+![img](../images/1.2.png)
 <a name = '2.3.1'></a>
 ### 2.3.1. Cấu hình chia sẻ ẩn danh truy cập
 - Bây giờ, hãy để chúng ta tạo một chia sẻ ẩn danh truy cập đầy đủ cho người dùng. Bất kỳ ai cũng có thể đọc / viết trong chia sẻ này.
@@ -66,10 +71,12 @@ yum install samba* -y
 mkdir -p /samba/anonymous_share
 chmod -R 0777 /samba/anonymous_share
 ```
+![img](../images/1.3.png)
 - Chỉnh sửa tập tin cấu hình Samba;
 ```
 vi /etc/samba/smb.conf
 ```
+
 - Tìm các chỉ mục sau mà chỉnh sửa như bên dưới:
 ```
 [...]
@@ -103,6 +110,8 @@ guest only = yes
 create mode = 0777
 directory mode = 0777
 ```
+![img](../images/1.4.png)
+![img](../images/1.5.png)
 
 - Start samba 
 ```
@@ -111,7 +120,7 @@ systemctl start nmb
 systemctl enable smb
 systemctl enable nmb
 ```
-
+![img](../images/1.6.png)
 <a name = '2.3.2'></a>
 ### 2.3.2. Kiểm tra cấu hình samba server.
 - Test với câu lệnh sau:
@@ -164,6 +173,8 @@ Press enter to see a dump of your service definitions
     guest only = Yes
     guest ok = Yes
 ```
+![img](../images/1.7.png)
+![img](../images/1.8.png)
 
 <a name = '2.3.3'></a>
 ### 2.3.3. Setup firewall
@@ -175,28 +186,32 @@ firewall-cmd --permanent --add-port=139/tcp
 firewall-cmd --permanent --add-port=445/tcp
 firewall-cmd --permanent --add-port=901/tcp
 ```
+![img](../images/1.9.png)
 - Ta reload lại firewall
 ```
 firewall-cmd --reload
 ```
+![img](../images/1.10.png)
 
 <a name = '2.3.4'></a>
 ### 2.3.4. Setup SELinux
-- Bật ***samba_enable_home_dirs *** nếu bạn muốn chia sẻ thư mục home qua Samba.
+- Bật **samba_enable_home_dirs** nếu bạn muốn chia sẻ thư mục home qua Samba.
 ```
-setsebool -P samba_enable_home_dirs trên
+setsebool -P samba_enable_home_dirs on
 ```
 *Nếu bạn tạo một thư mục mới, chẳng hạn như thư mục cấp cao mới, hãy gắn nhãn đó với samba_share_t để SELinux cho phép Samba đọc và ghi vào thư mục đó. Không gắn nhãn các thư mục hệ thống, chẳng hạn như / etc / và / home / , với samba_share_t, vì các thư mục đó đã có nhãn SELinux.*
 - Trong trường hợp của tôi, tôi đã tạo một thư mục ẩn danh *anonymou*. Vì vậy, hãy để chúng tôi dán nhãn như hình dưới đây.
 ```
 chcon -t samba_share_t /samba/anonymous_share/
 ```
+![img](../images/1.11.png)
 **Nếu bạn không muốn gây lỗi với SElinux thì hãy disabled nó đi bằng lệnh sau, trước tiên mở m**
 
 ```
 vi /etc/sysconfig/selinux
 ```
-**Thay đổi enabled > disabled **
+![img](../images/1.12.png)
+**Thay đổi enforcing > disabled**
 - Như thế này:
 ```
 # This file controls the state of SELinux on the system.
@@ -211,10 +226,85 @@ SELINUX=disabled
 SELINUXTYPE=targeted
 ```
 - Khởi động lại server 
+```
+reboot
+```
 
 <a name = '2.4'></a>
-## 2.4. Test Samba Share
+## 2.4. Test Samba Share 
+- Samba Server:
+  - ![img](../images/1.14.png)
 
+- Client
+  - ![img](../images/1.13.png)
+- Truy cập vào khu share anonymous
+  - ![img](../images/1.15.png)
+  - ![img](../images/1.16.png)
+- Test thử tạo một folder tên **TestFolder**
+  - ![img](../images/1.17.png)
+- Kiểm tra trên server:
+  - 
+  ```
+  ls -l /samba/anonymous_share/
+  ```
+  - ![img](../images/1.18.png)
+<a name = '2.5'></a>
+## 2.5. Tạo chia sẻ kích hoạt bảo mật trong máy chủ samba.
+- Những gì chúng ta đã thấy cho đến nay là tạo ra một chia sẻ samba truy cập đầy đủ. Bất cứ ai cũng có thể truy cập thư mục chia sẻ đó và có thể tạo, xóa các tệp / thư mục trong chia sẻ đó.
+
+- Bây giờ, chúng ta hãy tạo một chia sẻ samba được bảo vệ bằng mật khẩu để người dùng nên nhập tên người dùng và mật khẩu hợp lệ để truy cập vào thư mục chia sẻ.
+
+- Tạo một user **testuser** trong group **smbgroup**
+```
+useradd -s /sbin/nologin testuser
+groupadd smbgroup
+```
+- Add người dùng testuser vào group smbgroup
+```
+usermod -a -G smbgroup testuser
+smbpasswd -a testuser
+```
+- ![img](../images/1.19.png)
+- Tạo một vùng share mới **/samba/secure_share**
+```
+mkdir /samba/secure_share
+chmod -R 0755 /samba/secure_share
+chown -R testuser:smbgroup /samba/secure_share
+```
+- Chỉnh sửa samba config
+```
+vi /etc/samba/smb.conf
+```
+```
+[secure_share]
+path = /samba/secure_share
+writable = yes
+browsable = yes
+guest ok = no
+valid users = @smbgroup
+```
+- ![img](../images/1.20.png)
+```
+Testparm
+```
+Dán nhãn / samba / safe_share / với samba_share_t để SELinux cho phép Samba read và write cho nó.
+```
+chcon -t samba_share_t /samba/secure_share/
+
+```
+- Reset samba service
+```
+systemctl restart smb
+systemctl restart nmb
+```
+- ![img](../images/1.21.png)
+
+<a name = '2.6'></a>
+## 2.6. Test Samba Share with user
+- Kết nối và đăng nhập với user **testuser**
+- ![img](../images/1.22.png)
+- Sucessfull
+- ![img](../images/1.23.png)
 
 <a name = '3'></a>
 # 3. Tham Khảo
