--- a/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
+++ b/Setup-Samba-Server-Centos7/docs/2. Setup-Samba-Server.md
@@ -35,7 +35,7 @@
 ## 2.1. Samba Server
 ```
 Operating system : CentOS 7 minimal server
-Hostname : server.unixmen.local
+Hostname : server.test.local
 IP Address : 192.168.1.101/24
 ```
 
