Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -53,6 +53,7 @@ made by Gen
   - Thế là xong ta có thể vào địa chỉ trên máy http://localhost:9090 để vào trang của prometheus. 
   - Mặc định trong file prometheus.yml chỉ có job là localhost, bạn muốn thêm nhiều máy khác nhau thì phải cài gói node_exporter cho tùy máy.
 
+<a name = '2'></a>
 ## 2.	Setup Grafana:
    - Cài đặt:
      - Download:https://grafana.com/grafana/download
