Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -75,4 +75,9 @@ made by Gen
 
       sudo systemctl enable grafana-server.service
      ````
+     Mở port 3000 trong trường hợp bị chặn
+     ````
+     ufw allow 3000
+
+     ````
      - Truy cập vào web của grafana : http://IP:3000
