Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -17,7 +17,7 @@ made by Gen
   ````
   wget https://github.com/prometheus/prometheus/releases/download/v2.20.1/prometheus-2.20.1.linux-amd64.tar.gz
   tar -xzf prometheus-2.20.1.linux-amd64.tar.gz
-  mv mv prometheus-2.20.1.linux-amd64.tar.gz /usr/local/prometheus/
+  mv prometheus-2.20.1.linux-amd64.tar.gz /usr/local/prometheus/
  
   ````
   - Tạo service với nội dung sau:
@@ -81,3 +81,54 @@ made by Gen
 
      ````
      - Truy cập vào web của grafana : http://IP:3000
+<a name = '3'></a>
+## 3.	Setup Grafana monitor Server 2012 qua Prometheus:
+- Bạn cần tải file json về để tiện import.
+- Download wmi_exporter cho winserver 2012:https://github.com/martinlindhe/wmi_exporter/releases
+- Connect Grafana tới prometheus:
+ - Chọn Configuration, sau đó chọn data source type là Prometheus
+ - Nhập thông tin của prometheus( ip của server Prometheus), sau đó save lại.
+ - Như vậy chúng ta đã hoàn thành việc kết nối giữa Grafana và Prometheus.
+ - Mở port 9182 trên windows server 2012 để cho service.
+ - Có 2 phiên bản Agent:
+
+    - wmi_exporter.exe (click to run, dành cho các bạn nào chỉ cần các metric được enable sẵn).
+
+    - wmi_exporter.msi (dùng để cài đặt thông qua CMD, enable các tính năng thu thập metric nâng cao).
+ - Mở CMD run with admin
+ ````
+  msiexec /i C:\xxx ENABLED_COLLECTORS=”ad,cpu,cs,logon,memory,logical_disk,os,service,system,process,tcp,net,textfile,thermalzone”
+  trong đó xxx là tên file exporter
+  ENABLED_COLLECTORS=”các loại metric cần thu thập, tên của loại metric trong hình bên trên”
+ ````
+ - Sau khi cài đặt xong vào xem thử service có thấy WMI_Exporter không, nếu có thì bạn đã cài thành công.
+ - Kiểm tra http://IP:9182
+ - Ta quay lại với Prometheus.yml để chỉnh sửa job với nội dung sau:
+ ````
+ vi /usr/local/prometheus/prometheus.yml
+ 
+  – job_name: ‘windows’
+
+    static_configs:
+
+    – targets: [‘IP Windows 2012:9182’]
+
+ ````
+ - Restart Service Prometheus:
+ ````
+ systemctl restart prometheus
+ systemctl status prometheus
+ ````
+ - Sau đó vào lại web manager của prometheus: IP:9090 để xem target.
+ - Tạo Dashboard monitor Windows server trên Grafana.
+   - Truy cập vào Grafana, sau đó chọn Manage Dashboards:
+   - Chọn Import, chọn file json nãy mới tải về.
+   - Nhấn Ok.
+   - Done.
+   
+   
+   
+   
+   ****MADE BY GEN****
+ 
+
