--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -4,7 +4,7 @@
 
 [2. Setup grafana ?](#2)
 
-[3. Tham khảo](#3)
+[3. Setup Grafana monitor Server 2012 qua Prometheus](#3)
 ````
 made by Gen
 ````
