Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -50,6 +50,7 @@ made by Gen
 
   systemctl status prometheus
   ````
+  - Nếu máy bên ngoài muốn vào thì ta mở port 9090
   - Thế là xong ta có thể vào địa chỉ trên máy http://localhost:9090 để vào trang của prometheus. 
   - Mặc định trong file prometheus.yml chỉ có job là localhost, bạn muốn thêm nhiều máy khác nhau thì phải cài gói node_exporter cho tùy máy.
 
@@ -81,6 +82,10 @@ made by Gen
 
      ````
      - Truy cập vào web của grafana : http://IP:3000
+     - Setup Data Source:
+     ````
+     IPLocal:9090
+     ````
 <a name = '3'></a>
 ## 3.	Setup Grafana monitor Server 2012 qua Prometheus:
 - Bạn cần tải file json về để tiện import.
