Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -12,6 +12,7 @@ made by Gen
 ## 1.	Setup prometheus:
 
 - Cài đặt prometheus bằng paket:
+  - Nhớ disable SElinux.
   - Cài đặt:
   Download : https://prometheus.io/download/
   ````
