Update 2. Setup - Prometheus - Grafana.md
Update Tutorial Prometheus

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -10,20 +10,45 @@ made by Gen
 ````
 <a name = '1'></a>
 ## 1.	Setup prometheus:
-
+- Tạo user :
+  ````
+  useradd --no-create-home -s /bin/false prometheus
+  ````
+- Tạo các thư mục cần thiết cho Prometheus.
+````
+mkdir /etc/prometheus
+mkdir /var/lib/prometheus
+````
+- Thay đổi chủ sở hữu và nhóm của các thư mục này thành Prometheus (User tra vừa tạo).
+````
+chown prometheus:prometheus /etc/prometheus
+chown prometheus:prometheus /var/lib/prometheus
+````
 - Cài đặt prometheus bằng paket:
   - Nhớ disable SElinux.
   - Cài đặt:
   Download : https://prometheus.io/download/
   ````
   wget https://github.com/prometheus/prometheus/releases/download/v2.20.1/prometheus-2.20.1.linux-amd64.tar.gz
-  tar -xzf prometheus-2.20.1.linux-amd64.tar.gz
-  mv prometheus-2.20.1.linux-amd64.tar.gz /usr/local/prometheus/
+  tar xvzf prometheus-2.20.1.linux-amd64.tar.gz
+  mv prometheus-2.20.1.linux-amd64/* /var/lib/prometheus/
  
+  ````
+  - Điều chỉnh chủ sở hữu và nhóm thư mục / var / lib / prometheus .
+  ````
+  chown -R prometheus:prometheus /var/lib/prometheus
+  ````
+  - Di chuyển tệp cấu hình Prometheus trong thư mục / etc / prometheus .
+  ````
+  mv /var/lib/prometheus/prometheus.yml /etc/prometheus/
+  ````
+  - Tạo một liên kết mềm của tệp lệnh prometheus để chúng ta có thể thực hiện lệnh prometheus từ CLI.
+  ````
+  ln -s /var/lib/prometheus/prometheus /usr/local/bin/prometheus
   ````
   - Tạo service với nội dung sau:
   ````
-  vi /etc/systemd/system/prometheus.service
+  vi /usr/lib/systemd/system/prometheus.service
   
   [Unit]
   Description=Prometheus
@@ -31,25 +56,21 @@ made by Gen
   After=network-online.target
 
   [Service]
-  User=root
-  Group=root
+  User=prometheus
+  Group=prometheus
   Type=simple
-  ExecStart=/usr/local/prometheus/prometheus \
-  –config.file /usr/local/prometheus/prometheus.yml \
-  –storage.tsdb.path /usr/local/prometheus/ \
-  –web.console.templates=/usr/local/prometheus/consoles \
-  –web.console.libraries=/usr/local/prometheus/console_libraries
+  ExecStart=/usr/local/bin/prometheus \
+  --config.file /etc/prometheus/prometheus.yml \
+  --storage.tsdb.path /var/lib/prometheus/ \
+  --web.console.templates=/var/lib/prometheus/consoles \
+  --web.console.libraries=/var/lib/prometheus/console_libraries
 
   [Install]
   WantedBy=multi-user.target
   ````
-  - Restart và enable services.
+  - Khởi động dịch vụ Prometheus:
   ````
-  systemctl daemon-reload
-
-  systemctl start prometheus
-
-  systemctl status prometheus
+  systemctl enable --now prometheus.service
   ````
   - Nếu máy bên ngoài muốn vào thì ta mở port 9090
   - Thế là xong ta có thể vào địa chỉ trên máy http://localhost:9090 để vào trang của prometheus. 
