--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -73,6 +73,10 @@ chown prometheus:prometheus /var/lib/prometheus
   systemctl enable --now prometheus.service
   ````
   - Nếu máy bên ngoài muốn vào thì ta mở port 9090
+  ````
+  firewall-cmd --permanent --add-port=9090/tcp
+  firewall-cmd --reload
+  ````
   - Thế là xong ta có thể vào địa chỉ trên máy http://localhost:9090 để vào trang của prometheus. 
   - Mặc định trong file prometheus.yml chỉ có job là localhost, bạn muốn thêm nhiều máy khác nhau thì phải cài gói node_exporter cho tùy máy.
 
@@ -90,17 +94,12 @@ chown prometheus:prometheus /var/lib/prometheus
 
       sudo /sbin/chkconfig –add grafana-server
 
-      systemctl daemon-reload
-
-      systemctl start grafana-server
-
-      systemctl status grafana-server
-
-      sudo systemctl enable grafana-server.service
+      systemctl enable --now grafana-server.service
      ````
      Mở port 3000 trong trường hợp bị chặn
      ````
-     ufw allow 3000
+     firewall-cmd --permanent --add-port=3000/tcp
+     firewall-cmd --reload
 
      ````
      - Truy cập vào web của grafana : http://IP:3000
