Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -131,7 +131,7 @@ chown prometheus:prometheus /var/lib/prometheus
  - Kiểm tra http://IP:9182
  - Ta quay lại với Prometheus.yml để chỉnh sửa job với nội dung sau:
  ````
- vi /var/lib/prometheus/prometheus.yml
+ vi /etc/prometheus/
  
   – job_name: ‘windows’
 
