--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -12,7 +12,8 @@ made by Gen
 ## 1.	Setup prometheus:
 - Tạo user :
   ````
-  useradd --no-create-home -s /bin/false prometheus
+  sudo groupadd --system prometheus
+  sudo useradd -s /sbin/nologin --system -g prometheus prometheus
   ````
 - Tạo các thư mục cần thiết cho Prometheus.
 ````
@@ -21,8 +22,9 @@ mkdir /var/lib/prometheus
 ````
 - Thay đổi chủ sở hữu và nhóm của các thư mục này thành Prometheus (User tra vừa tạo).
 ````
-chown prometheus:prometheus /etc/prometheus
-chown prometheus:prometheus /var/lib/prometheus
+sudo mkdir /var/lib/prometheus
+sudo mkdir -p -m 775 /etc/prometheus/{rules,rules.d,files_sd}
+
 ````
 - Cài đặt prometheus bằng paket:
   - Nhớ disable SElinux.
@@ -31,46 +33,69 @@ chown prometheus:prometheus /var/lib/prometheus
   ````
   wget https://github.com/prometheus/prometheus/releases/download/v2.20.1/prometheus-2.20.1.linux-amd64.tar.gz
   tar xvzf prometheus-2.20.1.linux-amd64.tar.gz
-  mv prometheus-2.20.1.linux-amd64/* /var/lib/prometheus/
+  
+  cd prometheus-2.20.1.linux-amd64
  
   ````
-  - Điều chỉnh chủ sở hữu và nhóm thư mục / var / lib / prometheus .
+  - Sao chép Prometheus binary, console và console_libraries.
   ````
-  chown -R prometheus:prometheus /var/lib/prometheus
+  sudo cp prometheus promtool /usr/local/bin/
+  sudo cp -r consoles/ console_libraries/ /etc/prometheus/
   ````
-  - Di chuyển tệp cấu hình Prometheus trong thư mục / etc / prometheus .
+  - Tạo tệp cấu hình:
   ````
-  mv /var/lib/prometheus/prometheus.yml /etc/prometheus/
+  sudo vi /etc/prometheus/prometheus.yml
+  
+  global: 
+    scrape_interval:     15s 
+    evaluation_interval: 15s 
+    scrape_timeout: 15s  
+  scrape_configs:
+    - job_name: 'prometheus'
+      static_configs:
+      - targets: ['localhost:9090']
+
   ````
-  - Tạo một liên kết mềm của tệp lệnh prometheus để chúng ta có thể thực hiện lệnh prometheus từ CLI.
-  ````
-  ln -s /var/lib/prometheus/prometheus /usr/local/bin/prometheus
-  ````
+
   - Tạo service với nội dung sau:
   ````
-  vi /usr/lib/systemd/system/prometheus.service
+  sudo vi /etc/systemd/system/prometheus.service
   
   [Unit]
   Description=Prometheus
+  Documentation=https://prometheus.io/docs/introduction/overview/
   Wants=network-online.target
   After=network-online.target
 
   [Service]
+  Type=simple
+  Environment="GOMAXPROCS=2"
   User=prometheus
   Group=prometheus
-  Type=simple
+  ExecReload=/bin/kill -HUP $MAINPID
   ExecStart=/usr/local/bin/prometheus \
-  --config.file /etc/prometheus/prometheus.yml \
-  --storage.tsdb.path /var/lib/prometheus/ \
-  --web.console.templates=/var/lib/prometheus/consoles \
-  --web.console.libraries=/var/lib/prometheus/console_libraries
+    --config.file=/etc/prometheus/prometheus.yml \
+    --storage.tsdb.path=/var/lib/prometheus \
+    --web.console.templates=/etc/prometheus/consoles \
+    --web.console.libraries=/etc/prometheus/console_libraries \
+    --web.listen-address=0.0.0.0:9090 \
+    --web.external-url=
+
+  SyslogIdentifier=prometheus
+  Restart=always
 
   [Install]
   WantedBy=multi-user.target
   ````
-  - Khởi động dịch vụ Prometheus:
+  - Tiếp tục thay đổi quyền thư mục:
   ````
-  systemctl enable --now prometheus.service
+  sudo chown -R prometheus:prometheus /etc/prometheus
+  sudo chown -R prometheus:prometheus /var/lib/prometheus/
+  ````
+  - Restart Service :
+  ````
+  sudo systemctl daemon-reload
+  sudo systemctl start prometheus
   ````
   - Nếu máy bên ngoài muốn vào thì ta mở port 9090
   ````
