Update 2. Setup - Prometheus - Grafana.md

--- a/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
+++ b/Setup-Prometheus-Grafana-Monitor/docs/2. Setup - Prometheus - Grafana.md
@@ -133,7 +133,7 @@ sudo mkdir -p -m 775 /etc/prometheus/{rules,rules.d,files_sd}
      ````
 <a name = '3'></a>
 ## 3.	Setup Grafana monitor Server 2012 qua Prometheus:
-- Bạn cần tải file json về để tiện import.
+- Bạn cần tải file json về để tiện import: https://github.com/genethical99/Intern-ITStarVN-2020/blob/master/Setup-Prometheus-Grafana-Monitor/windows_server.json
 - Download wmi_exporter cho winserver 2012:https://github.com/martinlindhe/wmi_exporter/releases
 - Connect Grafana tới prometheus:
  - Chọn Configuration, sau đó chọn data source type là Prometheus
